--- a/index.html
+++ b/index.html
@@ -3,23 +3,113 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Page</title>
+    <title>ZILIQIA Token</title>
     <style>
         body {
             font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+            color: #333;
+        }
+        header {
+            background: #4CAF50;
+            color: white;
+            padding: 20px;
             text-align: center;
-            padding: 50px;
         }
-        h1 {
-            color: #4CAF50;
+        section {
+            padding: 20px;
         }
-        p {
-            color: #555;
+        .hero {
+            text-align: center;
+            background: #333;
+            color: white;
+            padding: 50px 20px;
+        }
+        .hero h1 {
+            margin: 0;
+        }
+        .hero p {
+            font-size: 18px;
+        }
+        .btn {
+            background: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 5px;
+            margin-top: 20px;
+            display: inline-block;
+        }
+        .tokenomics, .roadmap {
+            background: #fff;
+            border-radius: 10px;
+            padding: 20px;
+            margin: 20px 0;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+        footer {
+            text-align: center;
+            background: #4CAF50;
+            color: white;
+            padding: 10px;
         }
     </style>
 </head>
 <body>
-    <h1>Welcome to My GitHub Pages Site!</h1>
-    <p>This is a simple static website hosted with GitHub Pages.</p>
+    <header>
+        <h1>ZILIQIA Token</h1>
+        <p>Driving the Future of Meme Coins on the SUI Network</p>
+    </header>
+
+    <section class="hero">
+        <h1>Welcome to ZILIQIA!</h1>
+        <p>The revolutionary meme token built on the SUI blockchain</p>
+        <a href="#about" class="btn">Learn More</a>
+        <a href="#tokenomics" class="btn">Buy Now</a>
+    </section>
+
+    <section id="about">
+        <h2>About ZILIQIA</h2>
+        <p>ZILIQIA is a next-generation meme token built on the SUI blockchain. Designed to bring scalability, security, and cost efficiency, ZILIQIA offers a dynamic ecosystem for the Web3 era. As one of the pioneering tokens on SUI, we aim to redefine the standards of meme coins.</p>
+        <p>Why SUI? The SUI network offers unparalleled speed, low transaction fees, and developer-friendly features, making it the perfect home for ZILIQIA.</p>
+    </section>
+
+    <section id="tokenomics" class="tokenomics">
+        <h2>Tokenomics</h2>
+        <p>Total Supply: 1,000,000,000 $ZIL</p>
+        <ul>
+            <li>20% for Community Airdrop</li>
+            <li>30% for Liquidity</li>
+            <li>25% for Ecosystem Development</li>
+            <li>15% for Marketing</li>
+            <li>10% for Team</li>
+        </ul>
+    </section>
+
+    <section id="roadmap" class="roadmap">
+        <h2>Roadmap</h2>
+        <p><strong>2024 Q1:</strong> Token Launch and Airdrop Campaign</p>
+        <p><strong>2024 Q2:</strong> NFT Integration and Marketplace Launch</p>
+        <p><strong>2024 Q3:</strong> Strategic Partnerships and Community Expansion</p>
+        <p><strong>2024 Q4:</strong> Decentralized Application Platform Development</p>
+    </section>
+
+    <section id="community">
+        <h2>Join Our Community</h2>
+        <p>Stay connected and be part of the ZILIQIA journey!</p>
+        <ul>
+            <li><a href="https://x.com/zilmetavers" target="_blank">Twitter</a></li>
+            <li><a href="https://t.me/ziliqiarealy" target="_blank">Telegram Channel</a></li>
+            <li><a href="https://t.me/zilmetavers" target="_blank">Telegram Community</a></li>
+            <li><a href="https://t.me/ziliqiagrups" target="_blank">Telegram Group</a></li>
+            <li><a href="https://www.instagram.com/ziliqiametavers" target="_blank">Instagram</a></li>
+        </ul>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 ZILIQIA Token. All rights reserved.</p>
+    </footer>
 </body>
 </html>
